--- a/themes/andromeda-light/layouts/partials/essentials/style.html
+++ b/themes/andromeda-light/layouts/partials/essentials/style.html
@@ -1,24 +1,13 @@
-<!-- DNS preconnect -->
+<!-- DNS preconnect and prefetch for performance -->
 <meta http-equiv="x-dns-prefetch-control" content="on" />
-<link rel="preconnect" href="//ajax.googleapis.com" />
-<link
-  rel="preconnect"
-  href="https://fonts.gstatic.com"
-  crossorigin="anonymous" />
-<link rel="preconnect" href="https://use.fontawesome.com" crossorigin />
-<link rel="preconnect" href="//cdnjs.cloudflare.com" />
-<link rel="preconnect" href="//www.googletagmanager.com" />
-<link rel="preconnect" href="//www.google-analytics.com" />
+<!-- Critical third-party domains -->
+<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+<link rel="dns-prefetch" href="https://fonts.googleapis.com" />
 <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
+<link rel="dns-prefetch" href="https://cdnjs.cloudflare.com" />
 <link rel="dns-prefetch" href="https://use.fontawesome.com" />
-<link rel="dns-prefetch" href="//ajax.googleapis.com" />
-<link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
-<link rel="dns-prefetch" href="//www.googletagmanager.com" />
-<link rel="dns-prefetch" href="//www.google-analytics.com" />
-<link rel="dns-prefetch" href="//fonts.googleapis.com" />
-<link rel="dns-prefetch" href="//connect.facebook.net" />
-<link rel="dns-prefetch" href="//platform.linkedin.com" />
-<link rel="dns-prefetch" href="//platform.twitter.com" />
+<link rel="dns-prefetch" href="https://formspree.io" />
 
 <!-- plugins + stylesheet -->
 {{ $styles := slice }}
@@ -45,5 +34,5 @@
 {{ end }}
 
 
-<!-- <link rel="stylesheet" href="{{ $styles.RelPermalink }}" /> -->
+<!-- Inline critical CSS for above-the-fold content -->
 <style type="text/css">{{$styles.Content | safeCSS}}</style>
